--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,8 @@
       </div>
     </dialog>
     <error-modal></error-modal>
+    <success-modal></success-modal>
+    <my-toast></my-toast>
     <app-footer></app-footer>
   </body>
 </html>
