Refactors notes display and improves form handling
Improves note management by introducing a dedicated `NoteList` component for rendering and handling note interactions.

Enhances form handling by removing redundant error elements and streamlining note creation.

Updates CSS to improve textarea behavior and responsiveness.

Clears the countdown timer in ErrorModal to prevent unexpected behavior.

--- a/public/index.html
+++ b/public/index.html
@@ -83,12 +83,7 @@
 
         <div
           class="bg-base-100 p-6 rounded-b-xl rounded-tr-xl shadow-lg min-h-96">
-          <div
-            id="notes-list"
-            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
-          <p id="no-notes-message" class="text-center text-lg hidden py-10">
-            No notes found.
-          </p>
+          <note-list></note-list>
         </div>
 
         <div id="pagination-container" class="flex justify-center mt-8"></div>
